# virtual_Paint_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/helpers/: webcam.cpp  webcam.h  webcam.hpp
