cmake_minimum_required(VERSION 3.12)
project( vitualpaint.out )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
file(GLOB DisplayImage_SRC CONFIGURE_DEPENDS src/*.cpp src/helpers/*.cpp src/helpers/*.hpp)
add_executable( vitualpaint.out ${DisplayImage_SRC} )
target_link_libraries( vitualpaint.out ${OpenCV_LIBS} )